# radial-cones

./: README.md  recon.cxx
CmakeModules/: FindARMADILLO.cmake  FindBlitz.cmake  FindFFTW.cmake
Generation/: generate_unoptimized_radial_cones.m  make_base_cone_flex.m  radial_cones_example.m  trapezoid_grad.m
Optimization/: ArrayTemplates.cpp  ArrayTemplates.hpp  CMakeLists.txt  gridFFT.cpp  gridFFT.h  hdf5_interface.cpp  hdf5_interface.h  io_templates.hpp  mri_data.h  recon.cxx  tictoc.hpp
Optimization/CmakeModules/: ARMA_FindACML.cmake  FindHDF5.cmake
